添加登录按钮、温度仪表盘效果

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
             android:label="公用界面展示"/>
         <activity android:name=".AudionWaveActivity"
             android:label="录音波纹"/>
+        <activity android:name=".MuiltListViewActivity"></activity>
     </application>
 
 </manifest>
